
[TestMigration_ApplyTx/returns_error_on_invalid_SQL - 1]
conduit: failed to execute migration script: ERROR: syntax error at or near "INVALID" (SQLSTATE 42601)

1 | INVALID SQL;

---

[TestMigration_Apply/returns_error_on_invalid_SQL - 1]
conduit: failed to execute migration script: ERROR: syntax error at or near "INVALID" (SQLSTATE 42601)

2 | INVALID SQL STATEMENT;

---
